[package]
name = "glints_coeff_and_bounds_generator"
version = "0.1.0"
authors = ["beltegeuse <adrien.gruson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = "1"
clap = "2"
byteorder = "*"
cgmath = { version = "*" }
image = { version =  "*" }
openexr = { git = "https://github.com/beltegeuse/openexr-rs" } # Version 3
# openexr = { version = "*" } # Version 2